--- a/Group E/ECE3300-Lab1-GroupE/README
+++ b/Group E/ECE3300-Lab1-GroupE/README
@@ -1,1 +1,8 @@
+# ECE3300-Lab1-GroupE
+Lab 1 Switch ↔ LED interface
 
+Members: Paul Kim and Winson Zhu
+
+Lab Objective:
+Build a Verilog module on the Digilent Nexys A7-100T that reads 16 switches and drives 16 LEDs.
+Learn HDL I/O mapping, constraints files, synthesis, and FPGA programming.
