--- a/Group R/README
+++ b/Group R/README
@@ -5,7 +5,7 @@ ECE 3300 Lab 1 – Switch ↔ LED Interface
 – Learn HDL I/O mapping, constraints files, synthesis, and FPGA programming
 
 CODE
-- xdc snippet and verilog code is attached in the code directory 
+- xdc snippet and verilog code is attached in the folder named ECE3300L-Lab1-GroupR
 
 REPORT 
 - pdf report is attached containing screenshots and video link
