--- a/Group R/ECE3300-Lab1-GroupR/README
+++ b/Group R/ECE3300-Lab1-GroupR/README
@@ -9,3 +9,5 @@ CODE
 
 REPORT 
 - pdf report is attached containing screenshots and video link
+- youtube link is used in lab report but may be inaccessible 
+Youtube Link: https://youtu.be/t5BkGERtoOQ
