--- a/Group I/README
+++ b/Group I/README
@@ -1,1 +1,6 @@
+Lab 1 Switch ↔ LED interface
+
+Julio Flores and Victor Perez
+
+Lab Objective: The objective of this lab is to design and implement a simple Verilog module that uses 16 input switches to drive 16 output LEDs on a FPGA. We implement HDL I/O mapping, apply constraints using XDC files, synthesize the design, and program the FPGA to verify the hardware.
 
