--- a/Group P/README
+++ b/Group P/README
@@ -1,1 +1,4 @@
 
+This is the group for Adam Godfrey and Jonathan Huynh
+
+we will be collaborating and testing each lab together in order to promote team work and a deep understanding of material!
