--- a/Group J/README
+++ b/Group J/README
@@ -1,1 +1,5 @@
+Team Members: Sean Go & Ryan Tran
 
+ECE 3300 Lab #1 – Switch ↔ LED Interface
+– Build a Verilog module on the Digilent Nexys A7-100T that reads 16 switches and drives 16 LEDs.
+– Learn HDL I/O mapping, constraints files, synthesis, and FPGA programming
