--- a/Group B/README
+++ b/Group B/README
@@ -1,1 +1,5 @@
 By Nicholas Williams
+
+This Lab shows the workings of Vivado and the FPGA board. We use both to drive leds using switches on board the FPGA. 
+
+PLEASE USE THE UPDATED README THANK YOU
