--- a/Group B/README
+++ b/Group B/README
@@ -2,4 +2,4 @@ By Nicholas Williams
 
 This Lab shows the workings of Vivado and the FPGA board. We use both to drive leds using switches on board the FPGA. 
 
-PLEASE USE THE UPDATED PDF FOR THE LAB REPORT, THE VIDEO LINK IS AT THE BOTTOM.THANK YOU
+PLEASE USE THE "MOST_UPDATED..." PDF FOR THE LAB REPORT, THE VIDEO LINK IS AT THE BOTTOM.THANK YOU
