--- a/Group Y/ECE3300-Lab1-GroupY/README
+++ b/Group Y/ECE3300-Lab1-GroupY/README
@@ -1,1 +1,8 @@
+# ECE3300-Lab1-Groupy
+Lab 1 Switch &lt;-> LED Interface
+
+Members: Heba Hafez and Sean Wygant
+
+Lab Objective: Initialize the Nexys A7-100T and create a Verliog module. Utilizing the constraints XDC file we learned to
+map switches to LEDs on the board (IO Mapping) and how to synthesize project using Vivado.
 
