--- a/Group R/ECE3300-Lab2-GroupR/README
+++ b/Group R/ECE3300-Lab2-GroupR/README
@@ -13,3 +13,4 @@ CODE
 REPORT 
 - pdf report is attached containing screenshots and video link
 
+YOUTUBE LINK: https://www.youtube.com/watch?v=AU0JlCCPny4
