--- a/Group L/README
+++ b/Group L/README
@@ -1,3 +1,7 @@
 Group F: Anish Chinnakonda and Mariam Nadeem
+
+LAB ONE:
 Youtube Link: https://youtu.be/yp5rA3GqLTQ (Also On Lab Report)
 
+LAB TWO: 
+Youtube Link: https://youtu.be/wnE_beEecsQ (Also On Lab Report)
