--- a/Group Q/ECE3300-Lab2-GroupQ/README
+++ b/Group Q/ECE3300-Lab2-GroupQ/README
@@ -2,5 +2,6 @@ Lab 2: 4×16 Decoder Design on Nexys A7-100T FPGA
 
 Members: Kevin Tang and Jared Mocling
 
-Lab Objective: In this lab, we will design, simulate, and implement a 4-to-16 decoder with an enable input. When enabled, exactly one of 16 outputs goes HIGH based on the 4-bit input; when disabled, all
+Lab Objective: In this lab, we will design, simulate, and implement a 4-to-16 decoder with an enable input.
+When enabled, exactly one of 16 outputs goes HIGH based on the 4-bit input; when disabled, all
 outputs are LOW.
