--- a/Group W/ECE3300-Lab3-GroupW/README
+++ b/Group W/ECE3300-Lab3-GroupW/README
@@ -1,1 +1,7 @@
+ECE 3300 Lab 3 – 16x1 Multiplexer Using Nested 2x1 MUXes with Debounced Toggle Select Control
 
+Members: Jetts Crittenden & Evan Tram
+
+Objective: Design a 16-to-1 multiplexer (MUX16x1) using gate-level 2x1 multiplexers in Verilog
+
+Video Demo: 
