--- a/Group L/README
+++ b/Group L/README
@@ -5,3 +5,6 @@ Youtube Link: https://youtu.be/yp5rA3GqLTQ (Also On Lab Report)
 
 LAB TWO: 
 Youtube Link: https://youtu.be/wnE_beEecsQ (Also On Lab Report)
+
+LAB THREE: 
+Youtube Link: https://youtu.be/JmWrvIZUIm4 (Also On Lab Report)
