--- a/Group W/ECE3300-Lab3-GroupW/README
+++ b/Group W/ECE3300-Lab3-GroupW/README
@@ -4,4 +4,4 @@ Members: Jetts Crittenden & Evan Tram
 
 Objective: Design a 16-to-1 multiplexer (MUX16x1) using gate-level 2x1 multiplexers in Verilog
 
-Video Demo: 
+Video Demo: https://youtu.be/BAjskOn-4bg?si=-PpDiN8cB6hGoqZf  
