--- a/Group N/README
+++ b/Group N/README
@@ -1,1 +1,3 @@
-Teammates: Kobe Aquino and Daniel Mondragon Xicotencatl
+# ECE3300-Lab-GroupN
+
+Members: Daniel Mondragon Xicotencatl and Kobe Aquino
