--- a/Group H/ECE3300-Lab6-GroupH/lab6/lab6.runs/impl_1/.vivado.begin.rst
+++ b/Group H/ECE3300-Lab6-GroupH/lab6/lab6.runs/impl_1/.vivado.begin.rst
@@ -28,3 +28,33 @@
     <Process Command="vivado.bat" Owner="hvito" Host="ASTROFRANK" Pid="5992" HostCore="32" HostMemory="034266218496">
     </Process>
 </ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="hvito" Host="ASTROFRANK" Pid="32484" HostCore="32" HostMemory="034266218496">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="hvito" Host="ASTROFRANK" Pid="31656" HostCore="32" HostMemory="034266218496">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="hvito" Host="ASTROFRANK" Pid="30880" HostCore="32" HostMemory="034266218496">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="hvito" Host="ASTROFRANK" Pid="27856" HostCore="32" HostMemory="034266218496">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="hvito" Host="ASTROFRANK" Pid="33488" HostCore="32" HostMemory="034266218496">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="hvito" Host="ASTROFRANK" Pid="11756" HostCore="32" HostMemory="034266218496">
+    </Process>
+</ProcessHandle>
