--- a/Group W/ECE3300-Lab8-GroupW/README
+++ b/Group W/ECE3300-Lab8-GroupW/README
@@ -1,1 +1,7 @@
+ECE 3300 Lab 8 – RGB LED PWM Controller
 
+Members: Jetts Crittenden & Evan Tram
+
+Objective: Build a hardware-controlled RGB LED using Pulse Width Modulation (PWM). You’ll follow the same process and repo structure as Lab 7.
+
+Video Demo: https://youtu.be/p4dp1OhqBbs?si=4OprMyaDio6E4T-M
